# tohoku_sd_preparation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: tag_target.json
data/tag/: tag.json  tag_target.json
scripts/: convert_image_0.sh  convert_image_1.sh  download.py  filtered_copy.py  prepare_for_kohya_ss_sd_cmd.py  prepare_for_kohya_ss_sd_scripts.py  tag2json.py
url_list/: _excluded.txt  zunko.txt
