[tool.poetry]
name = "tohoku-sd-preparation"
version = "0.1.0"
description = ""
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]
readme = "README.md"
packages = [{include = "tohoku_sd_preparation"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[tool.poetry.dev-dependencies]
coverage = ">=5.3"
flake8 = ">=3.8.4"
isort = ">=5.9.3"
pydocstyle = ">=5.1.1"
black = ">=21.10b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
